--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/philosopher": "^4.5.10",
+    "@fontsource/rubik-puddles": "^4.5.4",
+    "@fontsource/share-tech-mono": "^4.5.9",
+    "@fontsource/sora": "^4.5.9",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "add": "^2.0.6",
     "gsap": "^3.9.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
@@ -17,7 +22,8 @@
     "styled-components": "^5.3.3",
     "swiper": "^8.0.6",
     "typewriter-effect": "^2.18.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
